# VainAudioSpectrumAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/SpectrumAnalyzer/: AudioBufferFifo.cpp  AudioBufferFifo.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumAnalyzerAverager.cpp  SpectrumAnalyzerAverager.h  SpectrumAnalyzerBinSmoother.cpp  SpectrumAnalyzerBinSmoother.h  SpectrumAnalyzerBuffer.cpp  SpectrumAnalyzerBuffer.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h  SpectrumAnalyzerCurve.cpp  SpectrumAnalyzerCurve.h
Tests/: SpectrumAnalyzerTests.h  Tests.cpp
